# gpt-generals

./: .env.example  .gitignore  README.md  app.py  client_tui.py  dev-requirements.txt  dev_server.py  game_client.py  game_engine.py  game_server.py  llm_utils.py  map_generator.py  message_handler.py  play_game.py  player_controller.py  player_tui.py  pyproject.toml  requirements.txt  simulation.py  tui.py  unit_movement.py
.github/workflows/: ci.yml
.mentat/: bashrc  precommit.sh  setup.sh
frontend/: .gitignore  README.md  README.update.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.test.ts  main.ts  main.tsx  models.ts  renderer.ts
frontend/src/components/: ChatPanel.tsx  GameBoard.tsx  LobbyScreen.tsx  MapEditorPanel.tsx
frontend/src/context/: AdminContext.tsx
frontend/src/tests/: App.test.tsx  GameBoard.test.tsx  api.test.ts  renderer.test.ts
frontend/styles/: main.css
static/css/: style.css
static/js/: main.js
templates/: index.html
test_scripts/: llm_simulation.py  simple_structured_example.py  simulation.py  test_refusals.py  test_structured_output.py
tests/: test_game_engine.py  test_llm_movement.py  test_player_controller.py
