[project]
name = "gpt-generals"
version = "0.1.0"
description = "A game project that leverages Large Language Models (LLMs)"
authors = [
    {name = "Mentat", email = "info@mentat.ai"},
]
dependencies = [
    "openai>=1.63.2",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pyright]
include = ["**/*.py"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "build",
    "dist",
    ".venv"
]
typeCheckingMode = "basic"
pythonVersion = "3.11"
strictParameterNoneValue = true
reportMissingTypeStubs = false
reportMissingImports = false  # Don't report missing imports
